--- a/saque/index.html
+++ b/saque/index.html
@@ -114,7 +114,7 @@
   </div>
 
   <div id="p1">
-    <img id="logo" src="images/spotify2-logo.png" alt="Spotify Logo">
+    <img id="logo" src="../images/spotify2-logo.png" alt="Spotify Logo">
     <div class="boxSaldo">
       <span class="textoSaldo">SALDO</span>
       <span class="valorSaldo">R$ <span class="saldoAtualizado">473.00</span></span>
@@ -163,3 +163,4 @@
 
 </body>
 </html>
+
